move drawNode func to after drawLine func

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <input type="number" value="90" id="number-nodes" />
               </div>
               <div class="seven wide column">
-                <button id="reload" class="ui fluid primary button">
+                <button id="reload" class="ui fluid labeled icon primary button">
                   <i class="icon redo alternate"></i>
                   Tạo mới
                 </button>
