--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="ui grid">
               <div class="three wide column">
-                <p>alpha = <span id="alpha-value">0.4</span></p>
+                <p>α = <span id="alpha-value">0.4</span></p>
               </div>
               <div class="thirteen wide column">
                 <div class="ui slider custom-slider" id="alpha-slider"></div>
